<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.game.pig.PigGameFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:text="@string/pig"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvPlayerYou"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/playerYou"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/turnScore"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvPlayerComputer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/playerComputer"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvYourScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:text="0"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvTurnScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:text="0"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvComputerScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:text="0"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <com.zzy.dicegames.ui.dice.DiceView
            android:id="@+id/dice1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            app:locked="false"
            app:number="6" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnRoll"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/roll" />

            <Button
                android:id="@+id/btnHold"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/hold" />

        </LinearLayout>

        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/newGame" />

    </LinearLayout>

</RelativeLayout>