<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    android:orientation="vertical"
    tools:context=".ui.stats.PigStatsFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gamesPlayed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvGamesPlayed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="0"
                android:textSize="18sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gamesWon"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvGamesWon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="0"
                android:textSize="18sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/winRate"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvWinRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="-"
                android:textSize="18sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highestScore"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvHighestScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="0"
                android:textSize="18sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lowestScore"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLowestScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="0"
                android:textSize="18sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/averageScore"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvAverageScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="0"
                android:textSize="18sp" />

        </TableRow>

    </TableLayout>

</LinearLayout>
