<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.game.farkle.FarkleFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/farkle"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_above="@id/diceWindow"
        android:layout_below="@id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvPlayerYou"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/playerYou"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/turnScore"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvPlayerComputer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/playerComputer"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvYourScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:text="0"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvTurnScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:text="0"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvComputerScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:text="0"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnBank"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/bank" />

        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/newGame" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp" />

    </LinearLayout>

    <include
        android:id="@+id/diceWindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/roll_dice_window" />

</RelativeLayout>